--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -635,6 +635,7 @@ strong,
 -----------------------------------------*/
 
 .client-logos {
+    display: none;
   border-bottom: 1px solid #dadfe3;
   margin-bottom: 0;
 }
@@ -1390,4 +1391,7 @@ strong,
 #join-button {
   margin-top: 20px;
   margin-bottom: 25px;
+}
+.orange {
+    color: #ffcc00;
 }
